[gd_scene load_steps=8 format=3 uid="uid://3gj5oqpom0p"]

[ext_resource type="Theme" uid="uid://ca4khmk8p1pma" path="res://mapas/theme.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://blr2me0gfror6" path="res://mapas/GraphEdit.tscn" id="2"]
[ext_resource type="Script" path="res://Scripts/mapas/PopupDialog.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c3tn3ck0trlnj" path="res://Sprites/btnplus_pressed.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ciesttmnlppva" path="res://Sprites/floppy_pressed.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cs7ig5l0p4k4y" path="res://Sprites/btnplus.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cmt4tre68blvd" path="res://Sprites/floppy.png" id="7"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GraphEdit" parent="." instance=ExtResource("2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
popup = NodePath("../Popup")

[node name="Popup" type="Popup" parent="."]
size = Vector2i(300, 185)
visible = true
theme = ExtResource("1")
script = ExtResource("3")
graph_edit = NodePath("../GraphEdit")

[node name="MarginContainer" type="MarginContainer" parent="Popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/MarginContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Title: "

[node name="TextEdit" type="LineEdit" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Title"

[node name="HBoxContainer2" type="HBoxContainer" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Color frame:    "

[node name="ColorFrame" type="ColorPickerButton" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.333333, 0.113725, 0.113725, 1)

[node name="HBoxContainer3" type="HBoxContainer" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Color selected: "

[node name="ColorSelected" type="ColorPickerButton" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.333333, 0.113725, 0.113725, 1)

[node name="saveButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 44.0
offset_right = 70.0
offset_bottom = 108.0
texture_normal = ExtResource("7")
texture_pressed = ExtResource("5")

[node name="PlusButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 118.0
offset_right = 71.0
offset_bottom = 182.0
texture_normal = ExtResource("6")
texture_pressed = ExtResource("4")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 560.0
offset_right = 73.0
offset_bottom = 580.0
text = "Volver"

[connection signal="pressed" from="Popup/MarginContainer/VBoxContainer/Save" to="Popup" method="_on_Save_pressed"]
[connection signal="text_changed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer/TextEdit" to="Popup" method="_on_TextEdit_text_changed"]
[connection signal="color_changed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer2/ColorFrame" to="Popup" method="_on_ColorFrame_color_changed"]
[connection signal="color_changed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer3/ColorSelected" to="Popup" method="_on_ColorSelected_color_changed"]
[connection signal="pressed" from="saveButton" to="GraphEdit" method="_on_saveButton_pressed"]
[connection signal="pressed" from="PlusButton" to="GraphEdit" method="_on_PlusButton_pressed"]
[connection signal="pressed" from="Button" to="GraphEdit" method="_on_Button_pressed"]
